--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">HANDYCHAT</string>
+    <string name="search_hint">Free text search, type users,dates,address...</string>
     <string-array name="categories">
         <item>All fields</item>
         <item>Plumbing</item>
